# POP3Client

./: CMakeLists.txt  LICENSE  README.md
include/: client.h  configuration.h  functionality.h  socket.h
src/: client.cpp  functionality.cpp  main.cpp  socket.cpp
